# myfirstaiproject

./: -  .bandit  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  ARCHITECTURE.md  CLAUDE.md  Dockerfile  PRD.md  PRD_AI_Platform_v2.0.docx  PRD_AI模型训练管理平台_v2.0.docx  README.md  _diag_nlp.py  check_env.py  config.py  debug_model.json  debug_predict.json  docker-compose.yml  generate_report.py  pyproject.toml  requirements.txt  run.py  verify_report.py  竞品分析报告.md  需求规格说明书.md
.claude/: SKILL.md  session_20260702.md  settings.json
.github/workflows/: ci.yml
app/: __init__.py  _timezone.py
app/executor/: __init__.py  callbacks.py  engine.py
app/executor/trainers/: __init__.py  base.py  keras_trainer.py  pytorch_trainer.py  sklearn_trainer.py  transformers_nlp_trainer.py
app/models/: __init__.py  comment.py  dataset.py  mixins.py  model_record.py  revoked_token.py  training_job.py  user.py
app/routes/: __init__.py  auth.py  comments.py  dashboard.py  datasets.py  models.py  training.py
app/routes/api/: __init__.py  auth.py  comments.py  datasets.py  models.py  stream.py  training.py  users.py
app/services/: __init__.py  auth_service.py  comment_service.py  dataset_import_service.py  dataset_recommendation_service.py  dataset_service.py  export_task_tracker.py  feature_extractor.py  hyperparameter_tuning.py  inference_service.py  model_export_service.py  model_recommender.py  model_service.py  parameter_guidance_service.py  training_service.py
app/static/css/: beautify.css  style.css
app/static/js/: algos.js  beautify.js  el-enhance.js  main.js  model_import.js
app/templates/: admin.html  base.html  dashboard.html  index.html  login.html  profile.html  register.html
app/templates/admin/: users.html
app/templates/datasets/: create.html  detail.html  edit.html  import.html  list.html  public.html
app/templates/errors/: 404.html  500.html  error.html
app/templates/includes/: _macros.html  (+3 more)
app/utils/: __init__.py  algorithm_helpers.py  algorithm_info.py  auth_helpers.py  cache.py  data_io.py  decorators.py  event_bus.py  helpers.py  jwt_helpers.py  nlp_preprocessing.py  notifications.py  test_data_generator.py  text_augment.py
migrations/versions/: 9d2f26e7bb46_添加评论表_comments_支持审核_回复_软删除.py  a1b2c3d4e5f6_添加token_version和索引优化.py  b2c3d4e5f6a7_添加账号锁定字段_failed_login_attempts_locked_until.py  c93348c4f6f5_add_independent_test_set_support.py
scripts/: _common.py  _independent_test_registry.py  audit_datasets.py  backfill_model_descriptions.py  batch_train.py  batch_train_v2.py  clean_overfit_models.py  cleanup_constant_predictors.py  cleanup_drafts.py  cleanup_merge_duplicates.py  cleanup_stale_jobs.py  collect_independent_test_sets.py  complete_missing_models.py  convert_prd_to_docx.py  delete_overfit_models.py  diagnose_model_quality.py  download_independent_tests.py  download_nlp_datasets.py  fetch_real_datasets.py  final_nine_models.py  fix_yaml_docstrings.py  generate_80_datasets.py  generate_arch_diagram.py  generate_category_datasets.py  generate_datasets.py  generate_er_diagram.py  generate_multitype_data.py  init_db.py  md_to_docx.py  migrate_category.py  phase2_cleanup.py  purge_synthetic.py  quality_watchdog.py  reevaluate_with_independent_tests.py  retrain_anti_overfit.py  retrain_from_quality_report.py  retrain_nlp.py  safe_delete_old_models.py  scrape_real_reviews.py  seed_data.py  (+8 more)
tests/: __init__.py  conftest.py  test_auth.py  test_cache.py  test_comments.py  test_datasets.py  test_engine.py  test_hyperparameter_tuning.py  test_inference_service.py  test_jwt_auth.py  test_model_import.py  test_models.py  test_nlp_inference.py  test_nlp_pipeline.py  test_training.py  test_users_api.py
(+14 files in other folders)
