[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-model-platform"
version = "2.0.0"
description = "AI模型训练管理平台 — 一站式数据集管理、模型注册、训练调度与超参数调优"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "babat"},
]
keywords = ["machine-learning", "model-management", "training", "flask", "ai-platform"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web Framework
    "Flask~=3.1.0",
    "Flask-SQLAlchemy~=3.1.1",
    "Flask-Login~=0.6.3",
    "Flask-Migrate~=4.1.0",
    "Flask-WTF~=1.2.2",
    # Database Driver
    "PyMySQL~=1.1.1",
    "SQLAlchemy~=2.0.36",
    # Password Hashing
    "bcrypt~=4.2.1",
    # Form Validation
    "WTForms~=3.2.1",
    "email-validator~=2.2.0",
    # File Upload Processing
    "Pillow~=11.1.0",
    # Data Processing
    "pandas~=2.2.3",
    "numpy~=2.2.3",
    # Date/Time
    "python-dateutil~=2.9.0",
    # JSON Web Token (API Auth)
    "PyJWT~=2.10.1",
    # CORS Support
    "Flask-CORS~=5.0.1",
    # Environment Variables
    "python-dotenv~=1.1.0",
    # Logging
    "colorlog~=6.9.0",
    # Machine Learning
    "scikit-learn~=1.8.0",
    "torch>=2.0.0,<3.0.0",
    "transformers>=4.30.0,<5.0.0",
    "tensorflow>=2.12.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3.4",
    "pytest-cov~=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.11.0",
]

[project.scripts]
ai-platform = "run:main"

[project.urls]
Homepage = "https://github.com/babat/ai-model-platform"
Repository = "https://github.com/babat/ai-model-platform.git"

# ========== pytest ==========

[tool.pytest.ini_options]
minversion = "8.3"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--color=yes",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ========== coverage ==========

[tool.coverage.run]
source = ["app"]
omit = [
    "*/migrations/*",
    "*/__pycache__/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"

# ========== ruff (linter) ==========

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
    "B904", # raise without from inside except
]
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false

# ========== mypy ==========

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["migrations/", "tests/"]
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
